<resources>
    <string name="app_name">نظام سوق العمل المحلي</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="answer_all_questions">يجب عليك إجابة جميع الاسئلة</string>
    <string name="file_is_large">الملف الذي قمت باختياره كبير يرجي اختيار ملف اخر</string>
    <string name="allow">سماح</string>
    <string name="allow_auto_start">تفعيل التشغيل التلقائي / auto start</string>
    <string name="enable_auto_start">يجب عليك تفعيل التشغيل التلقائي(auto start) حتي نتمكن من حفظ المعلومات وارسالها لعدم تواجد الانترنت </string>
    <string name="choose_avg_or_rating">يجب عليك اختيار اما المعدل او التقدير</string>
    <string name="construction_num_empty">يجب عليك إدخال رقم المنشأة أولاً</string>
    <string name="legal_entity_no_internet">لن يتم عرض بيانات الكيان القانوني للمنشأة لعدم توافر الانترنت</string>
    <string name="owner_empty">يجب عليك ادخال رقم الهوية للمالك وتاريخ بداية عمله</string>
    <string name="secondary_sector_empty">يجب عليك اختيار النشاط الثانوي أولاً</string>
    <string name="legal_entity_empty">يجب عليك تعبئة جميع الحقول عدا بيانات المالك و وصف النشاطات</string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_user_file">ملف المستخدم</string>
    <string name="menu_signout">تسجيل الخروج</string>
    <string name="major_services">البيانات الأساسية</string>
    <string name="main_services">الخدمات الأساسية</string>
    <string name="worker_complaint">تقديم شكوى\n عمالية</string>
    <string name="request_calculate_labor_rights">طلب احتساب\n حقوق عمالية</string>
    <string name="visits_services">خدمات الزيارات</string>
    <string name="facility_services">خدمات المنشآت</string>
    <string name="move_facility">نقل مكان المنشأة</string>
    <string name="request_calculation_right">طلب احتساب حقوق عمالية</string>
    <string name="requset_register_certification">طلب شهادة\n قيد</string>
    <string name="report_left_work_place">الإبلاغ عن ترك مكان عمل في المنشأة</string>
    <string name="report_at_new_work_place">الإبلاغ عن مكان عمل جديد</string>
    <string name="alert_template">نموذج إنذار</string>
    <string name="legal_action">تنسيب إجراء قانوني</string>
    <string name="create_seizure_report">إنشاء محضر ضبط</string>
    <string name="close_facility">قرار إغلاق المنشأة</string>
    <string name="test_name">براء اياد غازي الكحلوت</string>
    <string name="choose_activities">اختر النشاطات التي ترغب بها</string>
    <string name="choose_skills">اختر الكفاءات التي ترغب بها</string>
    <string name="choose_career">اختر المهن التي ترغب بها</string>
    <string name="attachment_record">مرفقات و سجلات الضبط</string>
    <string name="patient_info">البيانات الأساسية</string>
    <string name="PalestinianID">رقم الهوية الفلسطينية</string>
    <string name="FirstName">الاسم الأول</string>
    <string name="FatherName">اسم الأب</string>
    <string name="GrandfatherName">اسم الجد</string>
    <string name="Gender">الجنس</string>
    <string name="DateOfBirth">تاريخ الميلاد</string>
    <string name="NumberOfChildren">عدد الأولاد</string>
    <string name="SocialStatus">الحالة الاجتماعية</string>
    <string name="OtherNationality">جنسية أخرى</string>
    <string name="Family">العائلة</string>
    <string name="PlaceOfBirth">مكان الولادة</string>
    <string name="residencePlace">مكان الاقامة</string>
    <string name="MotherName">اسم الأم</string>
    <string name="DateOfDeath">تاريخ الوفاة</string>
    <string name="Nationality">الجنسية</string>
    <string name="Save">حفظ</string>
    <string name="state">المحافظة</string>
    <string name="district">الحي</string>
    <string name="region">المنطقة</string>
    <string name="move_facility_empty">يجب عليك اختيار المحافظة والبلدية وتعبئية الموبايل والهاتف علي الأقل</string>
    <string name="web_page_error">يجب عليك ادخال رابط صفحة الكترونية صحيح</string>
    <string name="email_error">يجب عليك ادخال بريد الكتروني صحيح</string>
    <string name="city">المدينة</string>
    <string name="street">الشارع</string>
    <string name="address_details">تفاصيل العنوان</string>
    <string name="nearset_address">أقرب معلم</string>
    <string name="building">البناية</string>
    <string name="phone_number">رقم الموبايل</string>
    <string name="Telephone">الهاتف</string>
    <string name="phone_number_first_grade">رقم الموبايل درجة أولى</string>
    <string name="save_nationality">هل تريد حفظ هذه الجنسية؟</string>
    <string name="confirm_address_update">هل أنت متأكد أنك تريد تعديل البيانات؟</string>
    <string name="email">البريد الالكتروني</string>
    <string name="facebook">فيسبوك</string>
    <string name="health_status">الحالة الصحية</string>
    <string name="health_status_detail">تفاصيل الحالة الصحية</string>
    <string name="relative_relation">صلة القرابة</string>
    <string name="occupation">المهنة</string>
    <string name="kind_of_education">نوع التعليم</string>
    <string name="educational_status">الحالة التعليمية</string>
    <string name="qualification">المؤهل</string>
    <string name="qualification_detail">تفاصيل المؤهل</string>
    <string name="avg">المعدل</string>
    <string name="rating">التقدير</string>
    <string name="graduation_country">بلد التخرج</string>
    <string name="graduation_year">سنة التخرج</string>
    <string name="practicing_certificate">هل يوجد شهادة مزاولة؟</string>
    <string name="certificate_no">رقم الشهادة</string>
    <string name="notes">ملاحظات</string>
    <string name="cancel">إلغاء</string>
    <string name="update_nationality">يجب عليك تعديل الجنسية الاخري</string>
    <string name="update_nationality_empty">يجب عليك تعبئة المديرية التي تتبع لهاعلي الاقل</string>
    <string name="edit_field"> يجب عليك تعديل إحدي البيانات</string>
    <string name="facebook_error">رابط الفيسبوك غير صحيح</string>
    <string name="empty_field">يجب عليك مليء جميع الحقول</string>
    <string name="disability_empty_feild">يجب عليك ملء نوع الاعاقة ومكانها وحجمها علي الأقل</string>
    <string name="career_empty">يجب عليك اختيار نوع المهنة</string>
    <string name="add_career_empty">يجب عليك اختيار المهنة</string>
    <string name="worker_health_no_internet">تم حفظ طلبك وعند الاتصال بالانترنت سيتم ارسال البيانات</string>
    <string name="wrong_email">يجب عليك ادخال بريد الكتروني صحيح</string>
    <string name="wrong_url">يجب عليك ادخال رابط صفحة الكترونية صحيحة</string>
    <string name="work_exp_empty">يجب عليك ملء حقول نوع الخبرة والمهنة واسم المؤسسة و تاريخ بداية العمل على الاقل</string>
    <string name="is_today">لا يمكنك اختيار تاريخ الانتهاء اليوم</string>
    <string name="is_bigger_today">لا يمكنك اختيار تاريخ الانتهاء أكبر من اليوم</string>
    <string name="is_bigger">لا يمكنك اختيار تاريخ بدء العمل أكبر من تاريخ انتهاء العمل</string>
    <string name="careers">المهن</string>
    <string name="name_of_enterprise">حدد اسم المنشأة</string>
    <string name="employer_name">اسم صاحب العمل</string>
    <string name="labor_name">اسم  العامل</string>
    <string name="phone">جوال/ تليفون</string>
    <string name="activity_sector">قطاع النشاط</string>
    <string name="work_field">مجال العمل المحدد</string>
    <string name="institute_name_temporary">اسم المنشأة*مؤقت*</string>
    <string name="enterprise_address">عنوان المنشأة</string>
    <string name="ending_work_way">طريقة إنهاء العمل</string>
    <string name="radioButton1_arbitrary_fired">فصل تعسفي</string>
    <string name="radioButton1_legal_fired">فصل قانوني</string>
    <string name="radioButton2_resignation">استقالة</string>
    <string name="radioButton3_leaving">ترك</string>
    <string name="ending_work_reasons">أسباب انهاء العمل</string>
    <string name="Next">التالي</string>
    <string name="contract">" يوجد عقد عمل مكتوب"</string>
    <string name="work_type">نوع العمل/ المهنة</string>
    <string name="type_of_contract">نوع العقد</string>
    <string name="last_pay">الأجر الأخير</string>
    <string name="pay_type">نوع الأجر</string>
    <string name="duration_pay">المدة(بالأيام)</string>
    <string name="date_beginning_work">تاريخ بداية العمل</string>
    <string name="leave_date">تاريخ ترك العمل</string>
    <string name="date_ending_work">تاريخ نهاية العمل</string>
    <string name="work_duration">مدة العمل</string>
    <string name="real_work_duration">مدة العمل الفعلية(سنوات)</string>
    <string name="late_payments">أجور متأخرة</string>
    <string name="yearly_vacation_duration">مدة الاجازة السنوية</string>
    <string name="period_not_observed">مدة المهلة التي لم تراع</string>
    <string name="legal_period_ending_work">روعيت المدة القانونية لإنهاء العمل</string>
    <string name="Save_complaint">حفظ الشكوى</string>
    <string name="address_contact">العنوان والتواصل</string>
    <string name="dependents">المعالين</string>
    <string name="dependent_not_approve">المعال غير مطابق للشروط</string>
    <string name="training_programs">البرامج التدريبية</string>
    <string name="acadmic_programs">البرنامج الأكاديمية</string>
    <string name="travel">السفر</string>
    <string name="family_member">أفراد العائلة</string>
    <string name="partner">الشريك</string>
    <string name="social_aid">إعانة اجتماعية</string>
    <string name="realty">ملكية العقارات</string>
    <string name="returning_labor">العمالة العائدة</string>
    <string name="add_returning_labor">إضافة عمالة عائدة</string>
    <string name="add_dependents">إضافة معال</string>
    <string name="add_career">إضافة مهنة</string>
    <string name="add_experience">إضافة خبرات عملية</string>
    <string name="practical_experiences">الخبرات العملية</string>
    <string name="add_eductionalstatus">إضافة حالة تعليمية</string>
    <string name="owner_name">اسم المالك </string>
    <string name="alarm_form">نموذج انذار</string>
    <string name="adjustment_report">انشاء محضر ضبط</string>
    <string name="add_language">إضافة لغات</string>
    <string name="language">اللغة</string>
    <string name="speaking_skill">مهارة المحادثة</string>
    <string name="writing_skill">مهارة الكتابة</string>
    <string name="reading_skill">مهارة القراءة</string>
    <string name="holand_test">اختبار هوالاند</string>
    <string name="dream_career">أحلامك المهنية</string>
    <string name="activities">النشاطات</string>
    <string name="competencies">الكفاءات</string>
    <string name="self_evaluation">التقييم الذاتي للقدرات والمهارات العامة والخاصة</string>
    <string name="add_practical_status">إضافة حالة عملية</string>
    <string name="practical_status">الحالة العملية</string>
    <string name="result">النتيجة</string>
    <string name="add_training_skills">إضافة مهارة تدريبية</string>
    <string name="training_skills">المهارات التدريبية</string>
    <string name="add_training_programs">إضافة برنامج تدريبي</string>
    <string name="select_file">اختيار ملف</string>
    <string name="no_file">لم يتم اختيار ملف</string>
    <string name="vehicle">ملكية السيارات</string>
    <string name="inspection_mng_btn">إدارة الزيارات التفتيشية للمفتش</string>
    <string name="store_inspection_result">إدخال نتائج التفتيش</string>
    <string name="re_visit">إعادة الزيارة </string>
    <string name="additional_services">خدمات إضافية</string>
    <string name="recommendation">التوصيات</string>
    <string name="occupational_safety_and_health">السلامة والصحة والمهنية</string>
    <string name="owner_sn">رقم هوية المالك</string>
    <string name="owner_start_work_date">تاريخ بدء عمل المالك</string>
    <string name="insert_worker">إضافة عامل</string>
    <string name="archive_title">أرشيف طلبات شهادات القيد </string>
    <string name="supporting_institute">الاستفادة من الحاضنات</string>
    <string name="temp_work">الاستفادة من برامج التشغيل</string>
</resources>