<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="10dp"
   >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/txtStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/language" />

    <TextView
        android:id="@+id/tv_language"
        style="@style/editTxtStyle"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down"
        />

    <TextView
        style="@style/txtStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/speaking_skill" />

    <TextView
        android:id="@+id/tv_speaking_skill"
        style="@style/editTxtStyle"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down"
        />

    <TextView
        style="@style/txtStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/writing_skill" />

    <TextView
        android:id="@+id/tv_writing_skill"
        style="@style/editTxtStyle"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down"
        />

    <TextView
        style="@style/txtStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reading_skill" />

    <TextView
        android:id="@+id/tv_reading_skill"
        style="@style/editTxtStyle"
        android:layout_width="match_parent"
        android:drawableEnd="@drawable/ic_baseline_arrow_drop_down"
        />


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginTop="10dp"
      >
      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_insert_file"
          style="@style/btnStyle"
          android:layout_width="wrap_content"
          android:layout_marginTop="10dp"
          android:text="@string/select_file"
          android:drawableStart="@drawable/ic_pin"
          android:paddingStart="30dp"
          android:paddingEnd="30dp"
          android:drawablePadding="8dp"
          android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/tv_no_file"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/no_file"
          android:layout_marginTop="8dp"
          android:textSize="16sp"
          android:textStyle="bold"
          android:layout_marginStart="10dp"
          android:textColor="@color/dorado"
/>
  </LinearLayout>


</LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_add_language"
        style="@style/btnStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Save" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_gravity="center" />

</RelativeLayout>